tests/errors/sem14.kt
fun foo(x: Int) {}

fun main() {
    foo(3.14); // wrong type
}